Code: Train CNN with logarithmic transverse momentum

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1584,6 +1584,50 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging with $\\log(p_\\mathrm{T})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-15' and time < '2025-07-16'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, log pT\n",
+      "ACC: 0.615 ± 0.006\n",
+      "AUC: 0.635 ± 0.009\n",
+      "True ACC and AUC\n",
+      "ACC: 0.644 ± 0.010\n",
+      "AUC: 0.694 ± 0.014\n",
+      "$0.615 \\pm 0.006$ & $0.635 \\pm 0.009$ & $0.644 \\pm 0.010$ & $0.694 \\pm 0.014$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, log pT'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
