--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -36,79 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.89791447   0.84766805   0.49613446   1.7724546    1.6221869\n",
-      "   0.5866339    0.84673226   2.0293605    1.0394156    1.1314392\n",
-      "   5.2415733   22.65248      4.6256194    1.9341174    5.7888503\n",
-      "  33.62831     39.310226     1.7245834    0.9502561    1.4348311\n",
-      "   1.5063889    4.9832063   94.27107    149.9697       2.402905\n",
-      "   1.8034132    0.9579044    6.0750594    7.760767     1.7822852\n",
-      "   3.1718547    2.0746336    2.4228923    1.4141732    4.2067666\n",
-      "   0.9381966    2.630445     1.2284774    0.89911693   1.9673767\n",
-      "   1.2441276    2.2272236    0.8714964    2.1590285    1.7622148\n",
-      "   9.179335     4.0268903    0.9820759    1.5466541    4.4457283\n",
-      "   2.151403     1.077853     2.0093322    2.2882087    2.0787652\n",
-      "   2.418934     2.0645065    0.8771792    1.8421859    0.9298184\n",
-      "   0.6915221    0.4205482    0.49500933   0.24540621   2.075255\n",
-      "   0.19020104   0.792787     0.36547637   0.48991975   0.33989665\n",
-      "   0.3457585    0.28561273   0.29117626   0.4954367    0.43271568\n",
-      "   0.8676987    3.0141034    0.64408106   0.63970846   0.49004385\n",
-      "   0.47260764   0.49912098   1.0636569    1.276172     3.6326485\n",
-      "   1.0463558    1.0662159    0.90480036   0.44568422   1.5016638\n",
-      "   0.37381154   0.64304054   0.93465424   1.5007286    2.5462515\n",
-      "   1.1037568    0.8474988    1.6802396    0.55783635   2.5658448\n",
-      "   1.0404415    1.0882108    2.2539678   74.83795      3.145125\n",
-      "   6.163101     0.9408716    2.1508286    1.418022     3.7836292\n",
-      "   2.937701     1.9056748    0.87136525   2.243046     1.9712288\n",
-      "   2.711043     2.3143318    3.8535614    2.111222     4.0413475\n",
-      "  15.220265     3.5453362    3.5029867   19.698692     5.3969016\n",
-      "  10.95706      2.7343678    6.1573997    4.5526834    9.526558\n",
-      "   3.0577252    2.4583948    2.5402157    3.240716     2.406384\n",
-      "   2.994774     3.7383144    6.2010207    4.211893     2.5689447\n",
-      "   3.110018     5.5020328    3.620321     1.6025177    2.5373657\n",
-      "   3.5069547    2.4171581    4.0208125    2.38176      1.8963374\n",
-      "   0.78700036   0.81472886   0.8588874    2.105938     2.6062768\n",
-      "   1.7806131    0.7076421    0.5949578    1.054614     3.7551496\n",
-      "   2.75315      0.6894658    0.3848099    5.7024736    0.5662867\n",
-      "   0.41168943   1.3976727    2.664419     2.007065     0.47816882\n",
-      "   1.3435498    2.153766     1.013906     0.8845041    1.0752037\n",
-      "   0.69156504   0.29725918   0.24608718   1.2798278    0.5199131\n",
-      "   0.27452347   1.7143809    0.80120575   1.4699724    0.19671623\n",
-      "   0.17389302   0.19812487   1.6602294    0.6458752    1.0878807\n",
-      "   0.32623583   0.3387491    0.28135744   0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.\n",
-      "   0.           0.           0.           0.           0.        ]\n",
-      "[13 11 13 11]\n",
-      "[185.541    148.55948  103.726776  94.860466]\n"
-     ]
-    }
-   ],
-   "source": [
-    "event = 5\n",
-    "with h5py.File('./data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_SR.h5', 'r') as f:\n",
-    "    print(f['TOWER/pt'][event][:])\n",
-    "\n",
-    "    print(f['LEPTON/flavor'][event][:])\n",
-    "    print(f['LEPTON/pt'][event][:])\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2203,6 +2130,44 @@
     "        npy_path = npy_dir / f'{name}.npy'\n",
     "        cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "        print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $\\log(p_\\mathrm{T})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-log_pT.py data/quark_jet_2_cut/pre-processing/VBF_in_SR.h5 data/quark_jet_2_cut/pre-processing/log_pT/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation-log_pT.py data/quark_jet_2_cut/pre-processing/VBF_in_BR.h5 data/quark_jet_2_cut/pre-processing/log_pT/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation-log_pT.py data/quark_jet_2_cut/pre-processing/GGF_in_SR.h5 data/quark_jet_2_cut/pre-processing/log_pT/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation-log_pT.py data/quark_jet_2_cut/pre-processing/GGF_in_BR.h5 data/quark_jet_2_cut/pre-processing/log_pT/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/quark_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/quark_jet_2_cut/pre-processing/log_pT/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-log_pT.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
    ]
   },
   {
