--- a/Note/note.tex
+++ b/Note/note.tex
@@ -94,7 +94,7 @@
 \label{sec:higgs_production}
     We aim to apply deep learning methods to distinguish vector boson fusion (VBF) from gluon-gluon fusion (GGF) and Higgs production at the Large Hadron Collider (LHC).
 
-    We want to apply the CWoLa method, so we can use the real data without knowing the true label.
+    We aim to apply the CWoLa method, enabling us to utilize real data without prior knowledge of the true label.
 % section higgs_production (end)
 \section{Sample Preparation}% (fold)
 \label{sec:sample_preparation}
@@ -1073,7 +1073,7 @@
         \item The photon channel contains large ``blank'' regions, which may confuse the neural network.
         \item Photons have higher transverse momentum, leading the network to focus on them and delay learning the jet features.
     \end{itemize}
-    Increasing the size of the training dataset may help mitigate these effects, allowing the network to eventually learn both photon and jet patterns effectively.
+    Increasing the size of the training dataset may mitigate these effects, allowing the network to learn both photon and jet patterns effectively.
 
     We evaluate model performance using the $2q0g$ dataset at different integrated luminosities, while retaining the photon information during training. The results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_L_3000_12000}.
     \begin{table}[htpb]
@@ -1088,6 +1088,29 @@
         \end{tabular}
     \end{table}
     These results indicate that increasing the dataset size leads to performance improvement, even when photon information is retained.
+    \subsection{Logarithmic transverse momentum}% (fold)
+    \label{sub:logarithmic_transverse_momentum}
+        To confirm whether the high $p_{\text{T}}$ of photons affects training performance, we apply a logarithmic transformation to the $p_{\text{T}}$ values in each pixel. This aims to reduce the intensity difference between high- and low-$p_{\text{T}}$ pixels, potentially allowing the network to better focus on spatial patterns. Specifically, each pixel's input is replaced with
+        \begin{equation}
+            \log\left( p_{\text{T}} + 1 \right) 
+        \end{equation}
+        where $p_{\text{T}}$ is the original transverse momentum value. The addition of 1 takes care of $p_{\text{T}} = 0$.
+
+        We evaluate model performance on the $2q0g$ dataset with and without the logarithmic transformation. Table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_log_pT} summarizes the results.
+        \begin{table}[htpb]
+            \centering
+            \caption{CNN training results with and without the logarithmic $p_{\text{T}}$ transformation. Each model is trained with photon information included. ACC and AUC values are averaged over 10 training runs.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_log_pT}
+            \begin{tabular}{l|cc|cc}
+                                      & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Dataset               & ACC               & AUC               & ACC               & AUC               \\ \hline
+                Original              & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
+                $\log(p_{\text{T}}) $ & $0.615 \pm 0.006$ & $0.635 \pm 0.009$ & $0.644 \pm 0.010$ & $0.694 \pm 0.014$
+            \end{tabular}
+        \end{table}
+        The results indicate that applying the $\log(p_{\text{T}})$ transformation does not improve the performance. This suggests that intensity dominance due to high-$p_{\text{T}}$ photons may not be the main limiting factor, or that the network is already sufficiently robust to handle such variations.
+    % subsection logarithmic_transverse_momentum (end)
+
 % section larger_training_dataset (end)
 
 \bibliographystyle{ieeetr}
