Code: Implement and test the event-CNN structure

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1628,6 +1628,137 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging with event-CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-16' and time < '2025-07-17'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.624 ± 0.011\n",
+      "AUC: 0.644 ± 0.021\n",
+      "True ACC and AUC\n",
+      "ACC: 0.679 ± 0.009\n",
+      "AUC: 0.739 ± 0.012\n",
+      "$0.624 \\pm 0.011$ & $0.644 \\pm 0.021$ & $0.679 \\pm 0.009$ & $0.739 \\pm 0.012$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized\n",
+      "ACC: 0.794 ± 0.001\n",
+      "AUC: 0.873 ± 0.001\n",
+      "True ACC and AUC\n",
+      "ACC: 0.792 ± 0.001\n",
+      "AUC: 0.871 ± 0.001\n",
+      "$0.794 \\pm 0.001$ & $0.873 \\pm 0.001$ & $0.792 \\pm 0.001$ & $0.871 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-19' and time < '2025-07-20'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +5\n",
+      "ACC: 0.649 ± 0.004\n",
+      "AUC: 0.691 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.681 ± 0.005\n",
+      "AUC: 0.739 ± 0.005\n",
+      "$0.649 \\pm 0.004$ & $0.691 \\pm 0.005$ & $0.681 \\pm 0.005$ & $0.739 \\pm 0.005$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +10\n",
+      "ACC: 0.650 ± 0.004\n",
+      "AUC: 0.692 ± 0.004\n",
+      "True ACC and AUC\n",
+      "ACC: 0.678 ± 0.007\n",
+      "AUC: 0.735 ± 0.010\n",
+      "$0.650 \\pm 0.004$ & $0.692 \\pm 0.004$ & $0.678 \\pm 0.007$ & $0.735 \\pm 0.010$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +15\n",
+      "ACC: 0.651 ± 0.004\n",
+      "AUC: 0.694 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.676 ± 0.006\n",
+      "AUC: 0.732 ± 0.007\n",
+      "$0.651 \\pm 0.004$ & $0.694 \\pm 0.005$ & $0.676 \\pm 0.006$ & $0.732 \\pm 0.007$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +10'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +15'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
