--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2659,6 +2659,246 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging with event-CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_eventCNN_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'pure, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_10_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 10\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_15_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 15\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_eventCNN_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_phi_aug_{aug}_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
