--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1759,6 +1759,94 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove photon information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-21' and time < '2025-07-22'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 1\n",
+      "ACC: 0.637 ± 0.012\n",
+      "AUC: 0.667 ± 0.020\n",
+      "True ACC and AUC\n",
+      "ACC: 0.682 ± 0.004\n",
+      "AUC: 0.740 ± 0.005\n",
+      "$0.637 \\pm 0.012$ & $0.667 \\pm 0.020$ & $0.682 \\pm 0.004$ & $0.740 \\pm 0.005$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with luminosity 12000 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-21' and time < '2025-07-22'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 12000 fb^-1, pT normalized\n",
+      "ACC: 0.655 ± 0.002\n",
+      "AUC: 0.701 ± 0.003\n",
+      "True ACC and AUC\n",
+      "ACC: 0.683 ± 0.004\n",
+      "AUC: 0.742 ± 0.005\n",
+      "$0.655 \\pm 0.002$ & $0.701 \\pm 0.003$ & $0.683 \\pm 0.004$ & $0.742 \\pm 0.005$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 12000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
