--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2899,6 +2899,113 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with luminosity 12000 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_12000_eventCNN_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 12000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 12000 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove photon information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "# aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_remove_photon_case1_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/remove_photon_case_1/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_wo_a_case1_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
