Code: Test various training sample size on event-CNN

--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -3006,6 +3006,151 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with various luminosity 300, 900, 1800 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_300_eventCNN_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 300\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 300 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_1800_eventCNN_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 1800\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 1800 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_900_eventCNN_pT_norm_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 900\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 900 fb^-1, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
