--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1844,6 +1844,76 @@
    ],
    "source": [
     "sample_type = 'quark jet: = 2, L: 12000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with various luminosity 300, 1800 $\\text{fb}^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-30' and time < '2025-07-31'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 300 fb^-1, pT normalized\n",
+      "ACC: 0.610 ± 0.015\n",
+      "AUC: 0.589 ± 0.036\n",
+      "True ACC and AUC\n",
+      "ACC: 0.606 ± 0.033\n",
+      "AUC: 0.641 ± 0.045\n",
+      "$0.610 \\pm 0.015$ & $0.589 \\pm 0.036$ & $0.606 \\pm 0.033$ & $0.641 \\pm 0.045$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 300 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 1800 fb^-1, pT normalized\n",
+      "ACC: 0.625 ± 0.010\n",
+      "AUC: 0.644 ± 0.019\n",
+      "True ACC and AUC\n",
+      "ACC: 0.674 ± 0.009\n",
+      "AUC: 0.732 ± 0.012\n",
+      "$0.625 \\pm 0.010$ & $0.644 \\pm 0.019$ & $0.674 \\pm 0.009$ & $0.732 \\pm 0.012$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 1800 fb^-1, pT normalized'\n",
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
