Code: Train event-CNN with ZZ4l mixed datasets

--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -3151,6 +3151,154 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to ZZ \\to 4\\ell$ channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_eventCNN_pT_norm_ZZ4l_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_ZZ_4l_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_ZZ_4l_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'ZZ4l'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_ZZ4l_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, ZZ4l'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/ZZ_4l/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 30000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_ZZ_4l_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_ZZ_4l_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'ZZ4l'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_ZZ4l_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_30000_eventCNN_pT_norm_ZZ4l_remove_product_case5_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_5/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 30000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_ZZ_4l_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_ZZ_4l_quark_jet.npy'\n",
+    "        data['decay_channel'] = 'ZZ4l'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_eventCNN_ZZ4l_wo_product_case5_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l, remove product: case 5'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
