--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -2242,6 +2242,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_5/40x40/VBF_in_SR.npy 40 5 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/VBF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_5/40x40/VBF_in_BR.npy 40 5 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_SR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_5/40x40/GGF_in_SR.npy 40 5 &\n",
+      "python pixelation-remove_decay_product_info.py data/ZZ_4l/quark_jet_2_cut/pre-processing/GGF_in_BR.h5 data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_5/40x40/GGF_in_BR.npy 40 5 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "case = 5\n",
+    "h5_dir = Path('./data/ZZ_4l/quark_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/ZZ_4l/quark_jet_2_cut/pre-processing/remove_product_case_{case}/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
