--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1852,12 +1852,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## with various luminosity 300, 1800 $\\text{fb}^{-1}$"
+    "## with various luminosity 300, 900, 1800 $\\text{fb}^{-1}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 900 fb^-1, pT normalized\n",
+      "ACC: 0.625 ± 0.007\n",
+      "AUC: 0.628 ± 0.009\n",
+      "True ACC and AUC\n",
+      "ACC: 0.660 ± 0.014\n",
+      "AUC: 0.715 ± 0.018\n",
+      "$0.625 \\pm 0.007$ & $0.628 \\pm 0.009$ & $0.660 \\pm 0.014$ & $0.715 \\pm 0.018$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 900 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1914,6 +1940,102 @@
    ],
    "source": [
     "sample_type = 'quark jet: = 2, L: 1800 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to ZZ \\to 4\\ell$ channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-30' and time < '2025-07-31'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, ZZ4l\n",
+      "ACC: 0.575 ± 0.012\n",
+      "AUC: 0.508 ± 0.039\n",
+      "True ACC and AUC\n",
+      "ACC: 0.538 ± 0.026\n",
+      "AUC: 0.543 ± 0.035\n",
+      "$0.575 \\pm 0.012$ & $0.508 \\pm 0.039$ & $0.538 \\pm 0.026$ & $0.543 \\pm 0.035$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, ZZ4l'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l\n",
+      "ACC: 0.601 ± 0.010\n",
+      "AUC: 0.621 ± 0.012\n",
+      "True ACC and AUC\n",
+      "ACC: 0.732 ± 0.018\n",
+      "AUC: 0.800 ± 0.023\n",
+      "$0.601 \\pm 0.010$ & $0.621 \\pm 0.012$ & $0.732 \\pm 0.018$ & $0.800 \\pm 0.023$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l, remove product: case 5\n",
+      "ACC: 0.606 ± 0.010\n",
+      "AUC: 0.626 ± 0.012\n",
+      "True ACC and AUC\n",
+      "ACC: 0.645 ± 0.006\n",
+      "AUC: 0.697 ± 0.009\n",
+      "$0.606 \\pm 0.010$ & $0.626 \\pm 0.012$ & $0.645 \\pm 0.006$ & $0.697 \\pm 0.009$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 30000 fb^-1, pT normalized, ZZ4l, remove product: case 5'\n",
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
